# rust-services

./: Cargo.toml  readme.md
crypto-service/: Cargo.toml
crypto-service/src/: aes_128.rs  aes_ige.rs  digital_signatures_with_elliptical_curve.rs  rsa_2048.rs
eth-service/: Cargo.toml
eth-service/src/: lib.rs
eth-service/src/chain/: chain_api.rs  mod.rs
eth-service/src/utils/: contract_builder.rs  mod.rs  send_request_contract.rs
file-api/: Cargo.toml
todo-service/: .env  Cargo.toml
todo-service/src/: db_access.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
