[package]
name = "eth-service"
version = "0.1.0"
authors = ["leviathan88 <elvisdedic@outlook.com>"]
edition = "2018"


[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethabi = "12.0.0"
hex = "0.4.2"
secp256k1 = "0.20"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }