[package]
name = "todo-service"
version = "0.1.0"
authors = ["leviathan88 <elvisdedic@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3"
actix-rt = "1.1.1"
dotenv = "0.15.0"
sqlx = {version = "0.3.5", default_features = false, features = ["postgres","runtime-tokio", "macros","chrono"]}
serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}
#openssl = { version = "0.10", features = ["vendored"] }